[package]
name = "toolkit"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/tldr", "crates/util", "crates/sourcegraph", "crates/github"]

[workspace.dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
eyre = "0.6.8"
dirs = "4.0.0"
walkdir = "2.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github = { path = "crates/github" }
tldr = { path = "crates/tldr" }
sourcegraph = { path = "crates/sourcegraph" }
util = { path = "crates/util" }

clap.workspace = true
eyre.workspace = true
