[package]
name = "toolkit"
description = "Toolkit is an opinionated toolkit complementing a personal development workflow. Many of the commands are quite verbose, and well suited for adding to your shell toolbelt"
version = "0.1.6"
edition = "2021"
license-file = "LICENSE"
authors = ["Kasper J. Hermansen contact@kjuulh.io"]
readme = "README.md"

[workspace]
members = [
  "crates/tldr",
  "crates/util",
  "crates/sourcegraph",
  "crates/github",
  "crates/stats",
]

[workspace.dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
eyre = "0.6.8"
dirs = "4.0.0"
walkdir = "2.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github = { path = "crates/github" }
tldr = { path = "crates/tldr" }
sourcegraph = { path = "crates/sourcegraph" }
util = { path = "crates/util" }
stats = { path = "crates/stats" }

clap.workspace = true
eyre.workspace = true
